# coursework1

./: .env  .gitignore  README.md  pyproject.toml  setup.cfg  user_settigs.json
data/: intraday_5min_IBM.csv
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
