[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Артем Шошура <artemshoshura@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.5"

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
